fixed misaligned type

--- a/main.css
+++ b/main.css
@@ -186,7 +186,7 @@ img {
 	align-items: center;
 }
 
-.warning-block .headline-2, .body-copy {
+.center {
 	text-align: center;
 }
 
